--- a/css/map.css
+++ b/css/map.css
@@ -1,7 +1,8 @@
 #map-container {
 	height: 700px; 
 	width: 900px;
-	position:relative;
+	position:absolute;
+	top:620px;
 }
 
 #map { 
@@ -30,7 +31,7 @@ path:hover {  fill-opacity: .1; }
     border-radius: 5px;
     color: #000;
     pointer-events: none;
-    z-index: 999999999;
+    z-index: 99;
     border:1px solid #e8e8e8;
     background-color:#FFF;
 	opacity: 0.8;
@@ -74,7 +75,7 @@ hr{
 	background-color: #FFF;
 	border: solid thin #CCC;
 	border-radius: 5px;
-	z-index: 100;	
+	z-index: 98;	
 }
 #Y2012{
 	top: 134px;
@@ -149,7 +150,7 @@ hr{
 	position: absolute;
 	top: 15px;
 	left: 50px;
-	z-index: 100;
+	z-index: 99;
 	color: rgb(100,100,100);
 }
 .map-title-label{
